--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-argparse==1.2.1
+beautifulsoup4==4.3.2
+Flask==0.10.1
+itsdangerous==0.24
+Jinja2==2.7.3
+MarkupSafe==0.23
 requests==2.5.1
 selenium==2.44.0
-wsgiref==0.1.2
+Werkzeug==0.9.6
