--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,11 @@ Flask==0.10.1
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+path.py==7.3
+PyInstaller==2.1
 requests==2.5.1
 selenium==2.44.0
+showdown-ai==0.0.1
+showdownai==0.0.1
+webargs==0.14.0
 Werkzeug==0.9.6
