--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 *.pyc
 chromedriver
 ./logs
+log_scraper/
+ghostdriver.log
 __pycache__
-showdown_ai.egg-info
+showdownai.egg-info
 venv
+build/
+dist/
